--- a/wppascal/style.css
+++ b/wppascal/style.css
@@ -1,46 +1,207 @@
 /*
-Theme Name: wppascal
-Author: Pascal Kuiper
-Version: 1.0
+Thema Name: Nieuw thema van Pascal Kuiper.
+Author: Pascal Kuiper.
+Author URL: .
+V 1.0
 */
-#validatie img {
-    height: 1em;
-    width: auto;
-    border: 0;
-    margin: 0 .3em;
+
+/* Generale css */
+body {
+    font-family: roboto;
+    color: #333;
+    margin: 0;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 
-body {
-  font-family: sans-serif;
-  color: #333;
-  margin: 0;
-  min-height: 100vh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+body > .container {
+    border-right: 1px solid red;
 }
 
 a {
-  color: dodgerblue;
+    color: lightgrey;
 }
 
-/* layout */
-.container {
-  padding: 2em;
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
+/*opmaak van main*/
+
+main {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-column-gap: 5em;
+    padding: 2em;
 }
 
+aside {
+    border-right: 1px solid red;
+    margin-right: -2em;
+}
+
+
+aside h4 {
+    color: red;
+}
+
+.screen-reader-text {
+    display: none;
+}
+
+/* ------------------------ Header ------------------------ */
 header {
-  background: dodgerblue;
-  color: #fff;;
+    background: silver;
+    color: #fff;
+    background-size: cover;
+    background-position: center center;
+    min-height: 25vw;
+}
+
+header p, h1, h2, h3, h4 {
+    font-family: roboto;
+}
+
+header .container {
+    border-right: 1px solid #eee;
+    min-height: 25vw;
+    margin-bottom: -2em;
+}
+
+header > .container > a {
+    text-decoration: none;
+}
+
+header > .container > a:hover {
+    text-decoration: underline;
+    color: crimson;
 }
 
 header a {
-  color: #fff;
+    color: #fff;
 }
 
+/* ------------------------ Menu ------------------------ */
+nav {
+    margin-left: -2em;
+    margin-right: -2em;
+}
+
+nav ul.menu {
+    border: 1px solid #eee;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    font-size: 1.3em;
+}
+
+nav .menu a {
+    text-decoration: none;
+    display: block;
+    background-color: black;
+    padding: .5em 1em;
+    border-bottom: 1px solid #eee;
+}
+
+nav ul.menu a {
+    border-right: 1px solid #eee;
+}
+
+nav .menu a:hover {
+    background-color: grey;
+}
+
+nav .menu .current-menu-item a {
+    background-color: grey;
+    border-right: .3em solid red;
+}
+
+/* ------------------------ Footer ------------------------ */
 footer {
-  background: dodgerblue;
-  color: #fff;
+    background: silver;
+    color: #fff;
+}
+
+footer a {
+    color: #fff;
+}
+
+/* ------------------------ Classes ------------------------ */
+.container {
+    padding: 0 2em;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.container img {
+    max-width: 100%;
+}
+
+.bericht {
+    border-bottom: 6px double black;
+}
+
+.bericht:last-of-type {
+    border-bottom: 0;
+}
+
+.postmetaData {
+    font-size: .8em;
+    color: #aaa;
+}
+
+.postmetaData a {
+    color: #aaa;
+}
+
+.postmetaData a:hover {
+    color: red;
+}
+
+.postmetaData ul{
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    display: inline;
+}
+
+.postmetaData li{
+    display: inline;
+}
+
+.postmetaData li:after{
+    content: ' | ';
+}
+
+.zoek-term-in-kop {
+    color: red;
+}
+
+.logged-in-as {
+    color: crimson;
+}
+
+label[for="comment"] {
+    display: none;
+}
+
+#comment {
+    width:  140px;
+    height: 350px;
+}
+
+#respond.comment-respond {
+    text-align: center;
+}
+@media screen and (min-width: 800px) {
+    nav ul.menu {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(12em, 1fr));
+    }
+
+    nav ul.menu a {
+        border-right: 1px solid #eee;
+    }
+
+    nav #menu-extramenu {
+        font-size: 1em;
+    }
 }
